--- a/css/instituto.css
+++ b/css/instituto.css
@@ -1,20 +1,35 @@
 .instituto {
-	height: 50vw;
+	height: 35vw;
 	background-color: #dfdfdf;
 	background-image: url("../src/back-img-01.jpg") !important;
 	background-repeat: no-repeat;
-	background-position: 0%;
+	background-position: 0% 40%;
 }
 
 .instituto .overlay {
-	height: 50vw;
+	height: 35vw;
 	width: 100%;
-	background-color: #2c9424;
+	background-image: linear-gradient(to right, #2c9424, black);
 	opacity: 70%;
 }
 
-.card {
+.instituto .card {
 	position: relative;
-	height: 45vw;
-	top: -48vw;
+	top: -15vw;
+	padding: 1.5rem;
+}
+
+.instituto .card-body {
+	text-align: justify;
+}
+
+.instituto .card-body .img {
+	margin: 1rem;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.instituto .card-body img {
+	width: 600px;
 }
