--- a/components/institucional.html
+++ b/components/institucional.html
@@ -3,7 +3,7 @@
 		<div class="overlay"></div>
 		<div class="card" style="width: 90%; margin-left: auto;margin-right: auto; background-color: #dfdfdf;">
 			<div class="card-body">
-				<h2 class="card-title" style="color: #2c9424;">CÂMPUS CHARQUEADAS</h2>
+				<h2 class="card-title" style="color: #2c9424;">INSTITUCIONAL - CÂMPUS CHARQUEADAS</h2>
 				<p class="card-text">
 					O Câmpus Charqueadas do IFSul teve sua origem a partir do Plano de Expansão da Rede Federal de
 					Educação Profissional e Tecnológica da SETEC/MEC, lançado em 2005.
