Ajuste na responsividade no navegador

--- a/components/galery.html
+++ b/components/galery.html
@@ -6,21 +6,29 @@
 				<h2 class="card-title" style="color: #2c9424;">GALERIA</h2>
 
 				<div class="row galeria-grid">
-					<div class="col-lg-6 col-md-6 col-xs-6 thumb mb-2rem">
+					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
 						<img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
 							class="zoom img-fluid " alt="">
 					</div>
-					<div class="col-lg-6 col-md-6 col-xs-6 thumb mb-2rem">
+					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
+						<img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+							class="zoom img-fluid " alt="">
+					</div>
+					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
+						<img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+							class="zoom img-fluid " alt="">
+					</div>
+					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
 						<img src="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
 							class="zoom img-fluid" alt="">
 					</div>
 
-					<div class="col-lg-6 col-md-6 col-xs-6 thumb">
+					<div class="col-lg-4 col-md-6 col-xs-4 thumb">
 						<img src="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
 							class="zoom img-fluid " alt="">
 					</div>
 
-					<div class="col-lg-6 col-md-6 col-xs-6 thumb">
+					<div class="col-lg-4 col-md-6 col-xs-4 thumb">
 						<img src="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
 							class="zoom img-fluid " alt="">
 					</div>
