--- a/components/header.html
+++ b/components/header.html
@@ -6,21 +6,21 @@
 				<li class="nav-item">
 					<a class="nav-link active" href="#">
 						<i class="fa-solid fa-user"></i>
-						Login Aluno
+						<span>Login Aluno</span>
 					</a>
 				</li>
 				<div class="vr"></div>
 				<li class="nav-item">
 					<a class="nav-link" href="#">
 						<i class="fa-solid fa-chalkboard-user"></i>
-						Login Docente
+						<span>Login Docente</span>
 					</a>
 				</li>
 				<div class="vr"></div>
 				<li class="nav-item">
 					<a class="nav-link" href="#">
 						<i class="fa-solid fa-school"></i>
-						Extensão
+						<span>Extensão</span>
 					</a>
 				</li>
 			</ul>
