--- a/css/galery.css
+++ b/css/galery.css
@@ -1,10 +1,6 @@
-.galeria {
-	height: 72vw;
-}
-
 .galeria .content {
 	margin-top: 1rem;
-	height: 70vw;
+	height: 1000px;
 	background-color: #dfdfdf;
 	background-image: url("../src/back-img-02.jpg") !important;
 	background-size: cover;
@@ -13,7 +9,7 @@
 }
 
 .galeria .overlay {
-	height: 70vw;
+	height: 1000px;
 	width: 100%;
 	background-image: linear-gradient(to right, #2c9424, black);
 	opacity: 70%;
@@ -21,7 +17,7 @@
 
 .galeria .card {
 	position: relative;
-	top: -63vw;
+	top: -900px;
 	padding: 1.5rem;
 }
 
@@ -57,4 +53,24 @@
 	top: 0;
 	bottom: 0;
 	margin: auto;
+}
+
+@media screen and (max-width: 995px) {
+	.galeria .overlay, .galeria .content {
+		height: 1300px;
+	}
+
+	.galeria .card {
+		top: -1200px;
+	}
+}
+
+@media screen and (max-width: 765px) {
+	.galeria .overlay, .galeria .content {
+		height: 2300px;
+	}
+
+	.galeria .card {
+		top: -2200px;
+	}
 }
