--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,6 @@
 
 #header #div-institucional p {
 	margin-left: 5rem;
-	line-height: 2.2;
 	color: #dfdfdf;
 }
 
@@ -58,10 +57,32 @@
 
 #header #nav-menu nav {
 	width: 100%;
-	height: 8vw;
+	height: 140px;
 }
 
 #header #nav-menu img {
-	height: 7vw;
+	max-height: 130px;
 	margin-left: 5rem;
+}
+
+@media screen and (max-width: 1000px) {
+	#header #div-institucional .nav-superior li {
+		margin-top: -5px;
+	}
+
+	#header #nav-menu img {
+		max-height: 100px;
+		margin-left: 2rem;
+	}
+}
+
+@media screen and (max-width: 890px) {
+	#header #div-institucional .nav-superior li .nav-link span {
+		display: none;
+	}
+
+	#header #nav-menu img {
+		max-height: 80px;
+		margin-left: 0;
+	}
 }
