Finalização do site

--- a/components/extra-info.html
+++ b/components/extra-info.html
@@ -6,30 +6,35 @@
 				<div class="extra-info-icon">
 					<i class="fa-solid fa-graduation-cap"></i>
 				</div>
-				<h2 style="color: #2c9424;">CURSOS</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-					mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna
-					mollis euismod. Donec sed odio dui. </p>
+				<h2 style="color: #2c9424;">INSTITUTO</h2>
+				<p style="text-align: justify;">Os Institutos Federais, criados pela Lei n° 11.892, de 29 de dezembro de
+					2008, são instituições de
+					educação superior, básica e profissional, pluricurriculares e multicampi, especializadas na oferta
+					de educação profissional e tecnológica nas diferentes modalidades de ensino, com base na conjugação
+					de conhecimentos técnicos e tecnológicos com as suas práticas pedagógicas.</p>
 				<p>
 			</div>
 			<div class="col-md-4">
 				<div class="extra-info-icon">
 					<i class="fa-solid fa-users"></i>
 				</div>
-				<h2 style="color: #2c9424;">ALUNOS</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-					mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna
-					mollis euismod. Donec sed odio dui. </p>
-				<p>
+				<h2 style="color: #2c9424;">ENSINO</h2>
+				<p style="text-align: justify;"><b>Cursos Técnicos Concomitantes</b> - Ensino Médio (outra instituição) com Habilitação Profissional. <br>
+					<b>Cursos Técnicos Integrados</b> - Ensino Médio com Habilitação Profissional. <br>
+					<b>Cursos Técnicos Subsequentes</b> - Pós Ensino Médio. Requisito para ingresso: Ensino Médio completo
+				</p>
 			</div>
 			<div class="col-md-4">
 				<div class="extra-info-icon">
 					<i class="fa-solid fa-award"></i>
 				</div>
-				<h2 style="color: #2c9424;">PREMIAÇÕES</h2>
-				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-					porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-					ut fermentum massa justo sit amet risus.</p>
+				<h2 style="color: #2c9424;">MOCITEC</h2>
+				<p style="text-align: justify;">É uma Mostra de Ciências e Tecnologias promovida pelo IFSul câmpus
+					Charqueadas. O evento
+					está em sua décima quinta edição e destina-se a apresentação, avaliação e premiação de trabalhos de
+					pesquisa, desenvolvimento e inovação em diversas áreas do conhecimento humano, elaborados por
+					estudantes do Ensino Fundamental, Médio, Educação Profissional de Nível Técnico, Ensino Superior e
+					Pós-Graduação.</p>
 				<p>
 			</div>
 		</div>
