--- a/components/header.html
+++ b/components/header.html
@@ -4,21 +4,21 @@
 		<nav class="navbar nv-1 navbar-expand-lg navbar-light bg-light">
 			<ul class="nav nav-superior justify-content-end">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">
+					<a class="nav-link active" href="">
 						<i class="fa-solid fa-user"></i>
 						<span>Login Aluno</span>
 					</a>
 				</li>
 				<div class="vr"></div>
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link" href="">
 						<i class="fa-solid fa-chalkboard-user"></i>
 						<span>Login Docente</span>
 					</a>
 				</li>
 				<div class="vr"></div>
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link" href="">
 						<i class="fa-solid fa-school"></i>
 						<span>Extensão</span>
 					</a>
@@ -30,7 +30,7 @@
 		<nav class="navbar nv-1 navbar-expand-lg navbar-light bg-light">
 			<ul class="nav nav-superior justify-content-end">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">
+					<a class="nav-link active" href="">
 						<img src="src/logo-wide.png" alt="Logo da instituição">
 					</a>
 				</li>
@@ -40,19 +40,19 @@
 		<nav class="navbar nv-1 navbar-expand-lg navbar-light bg-light">
 			<ul class="nav nav-instituto justify-content-end">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Institucional</a>
+					<a class="nav-link" href="#instituto">Institucional</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Notícias</a>
+					<a class="nav-link" href="#news">Notícias</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Fotos</a>
+					<a class="nav-link" href="#galeria">Fotos</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Redes Sociais</a>
+					<a class="nav-link" href="#redes">Redes Sociais</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Contato</a>
+					<a class="nav-link" href="#contato">Contato</a>
 				</li>
 			</ul>
 		</nav>
