--- a/components/institucional.html
+++ b/components/institucional.html
@@ -1,4 +1,4 @@
-<section class="instituto">
+<section id="instituto">
 	<div class="content">
 		<div class="overlay"></div>
 		<div class="card" style="width: 90%; margin-left: auto;margin-right: auto; background-color: #dfdfdf;">
