--- a/components/carousel.html
+++ b/components/carousel.html
@@ -6,13 +6,13 @@
 	</ol>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img class="d-block w-100 carousel-img" src="src/banner-1.jpeg" alt="Primeiro Slide">
+			<img class="d-block w-100 carousel-img" src="src/banner-3.jpg" alt="Primeiro Slide">
 		</div>
 		<div class="carousel-item">
-			<img class="d-block w-100 carousel-img" src="src/banner-2.png" alt="Segundo Slide">
+			<img class="d-block w-100 carousel-img" src="src/banner-1.jpeg" alt="Segundo Slide">
 		</div>
 		<div class="carousel-item">
-			<img class="d-block w-100 carousel-img" src="src/banner-3.jpg" alt="Terceiro Slide">
+			<img class="d-block w-100 carousel-img" src="src/banner-2.png" alt="Terceiro Slide">
 		</div>
 	</div>
 	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
