--- a/components/contato.html
+++ b/components/contato.html
@@ -1,77 +1,85 @@
 <section class="contato">
 	<div class="content">
 		<div class="overlay"></div>
-		<div class="card" style="width: 90%; margin-left: auto;margin-right: auto; background-color: #dfdfdf;">
+		<div id="contato" class="card" style="width: 90%; margin-left: auto;margin-right: auto; background-color: #dfdfdf;">
 			<div class="card-body">
 				<h2 class="card-title" style="color: #2c9424;">CONTATO</h2>
+				<p>Precisa de ajuda?</p>
+				<p>Submita sua dúvida no fomulário abaixo:</p>
 
-				<div class="col-md-12 order-md-1">
-					<form class="needs-validation" novalidate="">
-						<div class="row">
-							<div class="col-md-6 mb-3">
-								<label for="primeiroNome">Nome</label>
-								<input type="text" class="form-control" id="primeiroNome" placeholder="" value=""
-									required="">
-								<div class="invalid-feedback">
-									É obrigatório inserir um nome válido.
-								</div>
-							</div>
-							<div class="col-md-6 mb-3">
-								<label for="sobrenome">Sobrenome</label>
-								<input type="text" class="form-control" id="sobrenome" placeholder="" value=""
-									required="">
-								<div class="invalid-feedback">
-									É obrigatório inserir um sobre nome válido.
-								</div>
+				<form class="needs-validation" novalidate="" id="form-contato">
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="primeiroNome">Nome</label>
+							<input type="text" name="primeiroNome" class="form-control" id="primeiroNome"
+								placeholder="Nome" value="" required="">
+							<div class="invalid-feedback">
+								É obrigatório inserir um nome válido.
 							</div>
 						</div>
-
-						<div class="mb-3">
-							<label for="nickname">Nickname</label>
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span class="input-group-text">@</span>
-								</div>
-								<input type="text" class="form-control" id="nickname" placeholder="Nickname"
-									required="">
-								<div class="invalid-feedback" style="width: 100%;">
-									Seu nickname é obrigatório.
-								</div>
+						<div class="col-md-6 mb-3">
+							<label for="sobrenome">Sobrenome</label>
+							<input type="text" name="sobrenome" class="form-control" id="sobrenome"
+								placeholder="Sobrenome" value="" required="">
+							<div class="invalid-feedback">
+								É obrigatório inserir um sobre nome válido.
 							</div>
 						</div>
+					</div>
 
-						<div class="mb-3">
-							<label for="email">Email <span class="text-muted">(Opcional)</span></label>
-							<input type="email" class="form-control" id="email" placeholder="fulano@exemplo.com">
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="email">E-mail</label>
+							<input type="email" name="email" class="form-control" id="email"
+								placeholder="email@exemplo.com">
 							<div class="invalid-feedback">
 								Por favor, insira um endereço de e-mail válido, para atualizações de entrega.
 							</div>
 						</div>
 
-						<div class="mb-3">
-							<label for="endereco">Endereço</label>
-							<input type="text" class="form-control" id="endereco" placeholder="Rua dos bobos, nº 0"
-								required="">
+						<div class="col-md-6 mb-3">
+							<label for="telefone">Telefone</label>
+							<input type="text" name="telefone" class="form-control" id="telefone" placeholder="Telefone"
+								required>
 							<div class="invalid-feedback">
 								Por favor, insira seu endereço de entrega.
 							</div>
 						</div>
+					</div>
 
-						<div class="mb-3">
-							<label for="endereco2">Endereço 2 <span class="text-muted">(Opcional)</span></label>
-							<input type="text" class="form-control" id="endereco2" placeholder="Apartamento ou casa">
+					<div class="row">
+						<div class="col-md-12 mb-3">
+							<label for="assunto">Assunto</label>
+							<input type="text" name="assunto" class="form-control" id="assunto"
+								placeholder="Motivo do contato">
 						</div>
+					</div>
 
-						<hr class="mb-4">
-						<div style="display: flex;justify-content: flex-end;">
-							<button class="btn btn-primary btn-lg btn-block" type="submit"
-								style="width: 200px;">Enviar</button>
+					<div class="row">
+						<div class="col-md-12 mb-3">
+							<label for="mensagem">Exemplo de textarea</label>
+							<textarea class="form-control" id="mensagem" rows="5"></textarea>
 						</div>
-				</div>
+					</div>
+
+					<hr class="mb-4">
 				</form>
+				<div style="display: flex;justify-content: flex-end;">
+					<button id="enviar-form" class="btn btn-primary btn-lg btn-block"
+						style="width: 200px;">Enviar</button>
+				</div>
 
 				<br>
-				<h2 class="card-title" style="color: #2c9424;">REDES SOCIAIS</h2>
+				<h2 id="redes" class="card-title" style="color: #2c9424;">REDES SOCIAIS</h2>
+				<p>Entre em contato através dos links abaixo:</p>
+				<b><i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/ifsulcampuscharqueadas/" target="_blank">Instagram</a></b>
+				<br>
+				<b><i class="fa-brands fa-twitter"></i> <a href="google.com" target="_blank">Twitter</a></b>
+				<br>
+				<b><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/campuscharqueadas" target="_blank">Facebook</a></b>
+				<br>
+				<b><i class="fa-regular fa-window-restore"></i> <a href="http://www.charqueadas.ifsul.edu.br/" target="_blank">Website Oficial</a></b>
 			</div>
 		</div>
+	</div>
 </section>
