--- a/components/galery.html
+++ b/components/galery.html
@@ -1,4 +1,4 @@
-<section class="galeria">
+<section id="galeria">
 	<div class="content">
 		<div class="overlay"></div>
 		<div class="card" style="width: 90%; margin-left: auto;margin-right: auto; background-color: #dfdfdf;">
@@ -6,31 +6,25 @@
 				<h2 class="card-title" style="color: #2c9424;">GALERIA</h2>
 
 				<div class="row galeria-grid">
-					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
-						<img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-							class="zoom img-fluid " alt="">
+					<div class="col-xs-4 col-lg-4 col-md-6 thumb mb-2rem">
+						<img src="src/galeria-1.jpeg" class="zoom img-fluid" alt="">
 					</div>
-					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
-						<img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-							class="zoom img-fluid " alt="">
+					<div class="col-xs-4 col-lg-4 col-md-6 thumb mb-2rem">
+						<img src="src/galeria-2.jpeg" class="zoom img-fluid" alt="">
 					</div>
-					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
-						<img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-							class="zoom img-fluid " alt="">
+					<div class="col-xs-4 col-lg-4 col-md-6 thumb mb-2rem">
+						<img src="src/galeria-3.jpeg" class="zoom img-fluid" alt="">
 					</div>
-					<div class="col-lg-4 col-md-6 col-xs-4 thumb mb-2rem">
-						<img src="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-							class="zoom img-fluid" alt="">
+					<div class="col-xs-4 col-lg-4 col-md-6 thumb mb-2rem">
+						<img src="src/galeria-4.jpeg" class="zoom img-fluid" alt="">
 					</div>
 
 					<div class="col-lg-4 col-md-6 col-xs-4 thumb">
-						<img src="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-							class="zoom img-fluid " alt="">
+						<img src="src/galeria-5.jpeg" class="zoom img-fluid" alt="">
 					</div>
 
 					<div class="col-lg-4 col-md-6 col-xs-4 thumb">
-						<img src="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-							class="zoom img-fluid " alt="">
+						<img src="src/galeria-6.jpeg" class="zoom img-fluid" alt="">
 					</div>
 				</div>
 			</div>
@@ -38,8 +32,8 @@
 </section>
 
 <!-- Modal -->
-<div class="modal fade" id="modal" tabindex="-1" role="dialog"
-	aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
+	aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<img id="modal-imagem" src="" alt="Imagem">
