--- a/components/news.html
+++ b/components/news.html
@@ -1,4 +1,4 @@
-<section class="news">
+<section id="news">
 	<div class="card" style="width: 90%; margin-left: auto;margin-right: auto; background-color: #dfdfdf;">
 		<div class="card-body">
 			<h2 class="card-title" style="color: #2c9424;">ÚLTIMAS NOTÍCIAS</h2>
@@ -8,23 +8,17 @@
 					<div
 						class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 						<div class="col p-4 d-flex flex-column position-static">
-							<strong class="d-inline-block mb-2 text-primary">World</strong>
-							<h3 class="mb-0">Featured post</h3>
-							<div class="mb-1 text-muted">Nov 12</div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a
-								natural lead-in to
-								additional content.</p>
-							<button type="button" class="btn btn-link continue-reading">Continue reading</button>
+							<strong class="d-inline-block mb-2 text-success">Novidade</strong>
+							<h3 class="mb-0">PROCESSO SELETIVO</h3>
+							<div class="mb-1 text-muted">25 de Outubro</div>
+							<p class="card-text mb-auto">Inscrições abertas para o processo seletivo dos cursos
+								superiores em Engenharia de Controle e Automação e Superior de Tecnologia em Sistemas
+								para Internet</p>
+							<br>
+							<a href="http://www.charqueadas.ifsul.edu.br/" target="_blank">Continue lendo</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
-							<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-								role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-								focusable="false">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-									fill="#eceeef" dy=".3em">Thumbnail</text>
-							</svg>
-
+							<img src="src/noticia-1.jpg" alt="Notícia 1" class="noticia-img">
 						</div>
 					</div>
 				</div>
@@ -32,24 +26,17 @@
 					<div
 						class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 						<div class="col p-4 d-flex flex-column position-static">
-							<strong class="d-inline-block mb-2 text-success">Design</strong>
-							<h3 class="mb-0">Post title</h3>
-							<div class="mb-1 text-muted">Nov 11</div>
-							<p class="mb-auto">This is a wider card with supporting text below as a natural lead-in
-								to
-								additional
-								content.</p>
-							<button type="button" class="btn btn-link continue-reading">Continue reading</button>
+							<strong class="d-inline-block mb-2 text-success">Novidade</strong>
+							<h3 class="mb-0">AGRADECIMENTO</h3>
+							<div class="mb-1 text-muted">15 de Outubro</div>
+							<p class="mb-auto">A direção do câmpus tem o prazer de desejar mais um ótimo dia dos
+								professores para todos e todas que vivem suas vidas em prol do aprendizado e da
+								educação.</p>
+							<br>
+							<a href="http://www.charqueadas.ifsul.edu.br/" target="_blank">Continue lendo</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
-							<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-								role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-								focusable="false">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-									fill="#eceeef" dy=".3em">Thumbnail</text>
-							</svg>
-
+							<img src="src/noticia-2.jpg" alt="Notícia 2" class="noticia-img">
 						</div>
 					</div>
 				</div>
@@ -59,23 +46,19 @@
 					<div
 						class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 						<div class="col p-4 d-flex flex-column position-static">
-							<strong class="d-inline-block mb-2 text-primary">World</strong>
-							<h3 class="mb-0">Featured post</h3>
-							<div class="mb-1 text-muted">Nov 12</div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a
-								natural lead-in to
-								additional content.</p>
-							<button type="button" class="btn btn-link continue-reading">Continue reading</button>
+							<strong class="d-inline-block mb-2 text-success">Novidade</strong>
+							<h3 class="mb-0">VEM AI</h3>
+							<div class="mb-1 text-muted">1 de Outubro</div>
+							<p class="card-text mb-auto">😍 VESTIBULAR 📣📣 O IFSul divulgou os editais do processo
+								seletivo do ensino médio integrado 2023!
+								📣 As inscrições para a seleção estão abertas até o dia 28 de outubro e deverão ser
+								realizadas pelo site do Processo Seletivo.
+							</p>
+							<br>
+							<a href="http://www.charqueadas.ifsul.edu.br/" target="_blank">Continue lendo</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
-							<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-								role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-								focusable="false">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-									fill="#eceeef" dy=".3em">Thumbnail</text>
-							</svg>
-
+							<img src="src/noticia-3.jpg" alt="Notícia 3" class="noticia-img">
 						</div>
 					</div>
 				</div>
@@ -83,24 +66,17 @@
 					<div
 						class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 						<div class="col p-4 d-flex flex-column position-static">
-							<strong class="d-inline-block mb-2 text-success">Design</strong>
-							<h3 class="mb-0">Post title</h3>
-							<div class="mb-1 text-muted">Nov 11</div>
-							<p class="mb-auto">This is a wider card with supporting text below as a natural lead-in
-								to
-								additional
-								content.</p>
-							<button type="button" class="btn btn-link continue-reading">Continue reading</button>
+							<strong class="d-inline-block mb-2 text-success">Extensão</strong>
+							<h3 class="mb-0">CURSOS ONLINE GRATUITOS</h3>
+							<div class="mb-1 text-muted">29 de Julho</div>
+							<p class="mb-auto">Que tal aprender inglês ou espanhol gratuitamente e 100% online, em um
+								curso com a qualidade IFSul? Neste primeiro de três módulos, cada um com duração de um
+								semestre, você aprenderá o idioma com vídeos, apostilas e muito mais!</p>
+							<br>
+							<a href="http://www.charqueadas.ifsul.edu.br/" target="_blank">Continue lendo</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
-							<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-								role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-								focusable="false">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-									fill="#eceeef" dy=".3em">Thumbnail</text>
-							</svg>
-
+							<img src="src/noticia-4.jpg" alt="Notícia 4" class="noticia-img">
 						</div>
 					</div>
 				</div>
@@ -108,21 +84,3 @@
 		</div>
 	</div>
 </section>
-
-<div class="modal" id="modal-news" tabindex="-1">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">Modal title</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<p>Modal body text goes here.</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
-			</div>
-		</div>
-	</div>
-</div>
