--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@
 
 #header #div-institucional p {
 	margin-left: 5rem;
+	line-height: 2.2;
 	color: #dfdfdf;
 }
 
@@ -61,7 +62,7 @@
 }
 
 #header #nav-menu img {
-	max-height: 130px;
+	max-height: 90px;
 	margin-left: 5rem;
 }
 
@@ -71,7 +72,7 @@
 	}
 
 	#header #nav-menu img {
-		max-height: 100px;
+		max-height: 70px;
 		margin-left: 2rem;
 	}
 }
@@ -82,7 +83,7 @@
 	}
 
 	#header #nav-menu img {
-		max-height: 80px;
+		max-height: 70px;
 		margin-left: 0;
 	}
 }
