--- a/css/news.css
+++ b/css/news.css
@@ -1,10 +1,10 @@
-.news {
+#news {
 	margin-top: 3rem;
 	margin-bottom: 3rem;
 	background-color: #dfdfdf;
 }
 
-.news h2 {
+#news h2 {
 	margin-top: 1rem;
 	margin-bottom: 1.5rem;
 }
@@ -12,4 +12,9 @@
 .continue-reading {
 	text-align: left !important;
 	padding-left: 0 !important;
+}
+
+.noticia-img {
+	width: 250px;
+	box-shadow: 5px 5px 5px #afafaf;
 }
