--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 #header #div-institucional {
 	width: 100%;
-	height: 40px;
+	height: 30px;
 	background-color: #343a40;
 	display: flex;
 	justify-content: space-between;
@@ -8,7 +8,7 @@
 
 #header #div-institucional p {
 	margin-left: 5rem;
-	line-height: 2.2;
+	line-height: 1.7;
 	color: #dfdfdf;
 }
 
@@ -16,7 +16,7 @@
 	position: relative;
 	top: 3px;
 	width: 50%;
-	height: 42px;
+	height: 32px;
 	font-size: 0.85rem;
 	background-color: #2c9424 !important;
 	z-index: 3;
@@ -58,21 +58,25 @@
 
 #header #nav-menu nav {
 	width: 100%;
-	height: 140px;
+	height: 100px;
 }
 
 #header #nav-menu img {
-	max-height: 90px;
+	max-height: 70px;
 	margin-left: 5rem;
 }
 
 @media screen and (max-width: 1000px) {
 	#header #div-institucional .nav-superior li {
-		margin-top: -5px;
+		margin-top: -10px;
+	}
+
+	.vr {
+		margin-top: -10px;
 	}
 
 	#header #nav-menu img {
-		max-height: 70px;
+		max-height: 60px;
 		margin-left: 2rem;
 	}
 }
@@ -83,7 +87,7 @@
 	}
 
 	#header #nav-menu img {
-		max-height: 70px;
+		max-height: 60px;
 		margin-left: 0;
 	}
 }
